# pico-mlx90640

./: CMakeLists.txt  MLX90640_API.cpp  MLX90640_API.h  MLX90640_Pico_I2C.cpp  README.md
